# song-popularities-and-properties-during-time

./: .gitignore  NeworkAnalysis.html  NeworkAnalysis.ipynb  README.md  by_year_analysis.py  by_year_analysis_clustering.py  pyproject.toml
dataset/: README.md
gephi/: README.md
gephi_modified/: README.md
metrics/: README.md
works/: NeworkAnalysisDraft.html
